--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.1",
   "description": "An Express Waterline Starter pack. ",
   "author": "Wale Eseyin",
+  "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js",
+    "dev": "gulp"
   },
   "repository": {
     "type": "git",
@@ -14,16 +16,16 @@
     "bcryptjs": "^2.3.0",
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
     "express": "~4.12.4",
-    "hbs": "~2.9.0",
     "joi": "^10.0.1",
     "morgan": "~1.5.3",
     "sails-mongo": "^0.12.1",
     "sails-postgresql": "^0.11.4",
-    "serve-favicon": "~2.2.1",
     "uuid": "^3.0.1",
     "waterline": "^0.11.6"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.2.1"
+  }
 }
